--- a/src/AllProducts.css
+++ b/src/AllProducts.css
@@ -1,16 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Merriweather:wght@300&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  font-family: "Merriweather", serif;
+img{
+  width:100%
+}
+.AllProductContainer {
+  max-width: 90%;
+  margin: 0 auto;
   height: 100vh;
-  max-width: 85%;
-  margin:0 auto;
+}
+.Card {
+  height: 70vh;
 }
 
-/* Card Section */
-.Card{
-  height:450px;
+.Card img{
+  height: 50vh;
 }
