--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Merriweather:wght@300&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Merriweather:wght@300&display=swap');
-
-body{
-  font-family: 'Merriweather', serif;
+body {
+  font-family: "Merriweather", serif;
 }
