--- a/src/AllProducts.css
+++ b/src/AllProducts.css
@@ -2,12 +2,13 @@ img{
   width:100%
 }
 .AllProductContainer {
-  max-width: 90%;
+  max-width: 85%;
   margin: 0 auto;
   height: 100vh;
 }
 .Card {
   height: 70vh;
+  width:21vw;
 }
 
 .Card img{
